@@ -1,3 +1,8 @@
+*** 20000917_1 by lusky
+changed "juping locally" to "locally juping" (gp)
+typo in stats z display (gp)
+
+
 *** 20000914_1 by lusky
 typo in channel jupe oper notice (db)
 changed 461 error to show * for empty field (tv)
